--- a/.atomist.yml
+++ b/.atomist.yml
@@ -14,3 +14,18 @@ generator:
     - "editor_name": "ChangeMainToPrint"
     - "project_name": "elm-katz-rugs"
 
+---
+kind: "operation"
+client: "rug-cli 0.23.0-SNAPSHOT"
+editor:
+  name: "atomist-rugs.rug-editors.AddTypeScriptEditor"
+  group: "atomist-rugs"
+  artifact: "rug-editors"
+  version: "0.8.0"
+  origin:
+    repo: "https://github.com/atomist-rugs/rug-editors.git"
+    branch: "b29e16a2eb08430790d6ef7d72ab2c199786d7c0"
+    sha: "b29e16a"
+  parameters:
+    - "editor_name": "Hello"
+
