--- a/.atomist.yml
+++ b/.atomist.yml
@@ -59,3 +59,19 @@ editor:
   parameters:
     - "editor_name": "UpgradeToBeginnerProgram"
 
+---
+kind: "operation"
+client: "rug-cli 0.23.1-SNAPSHOT"
+editor:
+  name: "atomist-rugs.rug-editors.AddTypeScriptEditor"
+  group: "atomist-rugs"
+  artifact: "rug-editors"
+  version: "0.9.0"
+  origin:
+    repo: "https://github.com/atomist-rugs/rug-editors.git"
+    branch: "82acbef9ce2c04e0cb6316b9fde702a89469a85b"
+    sha: "82acbef"
+  parameters:
+    - "editor_name": "WrapFunctionBodyTS"
+    - "description": "change the type, and wrap the body, of certain functinos"
+
